# r-chatbot-03

./: .gitignore  README.md  pyproject.toml
client/: chat-service.js  eslint.config.js  index.html  index.js  package-lock.json  package.json  styles.css  tsconfig.app.json  tsconfig.json  tsconfig.node.json  ui-controller.js  vite.config.ts  vitest.config.ts
client/assets/: fonts.css  style.min.css
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/components/ChatBox/: ChatBox.css  ChatBox.tsx  ChatBoxBody.tsx  ChatBoxHeader.tsx  ChatBoxInput.tsx  ChatBoxOverlay.tsx  FaqTemplate.tsx
client/src/components/utils/: Markdown.tsx
client/src/hooks/: use-toast.ts
client/src/types/: assets.d.ts
server/: main.py
server/app/: init_db.py  pipeline.py  retriever.py  tracking_server.py
server/db/: __init__.py  crud.py  database.py  events.py  models.py  queries.py
server/middleware/: tracking.py
server/scripts/: __init__.py  calculate_metrics.py  inspect_db.py  vectorize_db.py
server/store/: app.db-shm  app.db-wal  faq.yml  form.db
server/store/faq_collection/: chroma.sqlite3
